k3s/mr-teddycloud/mr-teddycloud-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: mr-teddycloud
  name: mr-teddycloud
  labels:
    app: mr-teddycloud
spec:
  selector:
    matchLabels:
      app: mr-teddycloud
  replicas: 1
  template:
    metadata:
      labels:
        app: mr-teddycloud
    spec:
      hostNetwork: true
      containers:
        - name: mr-teddycloud
          image: ghcr.io/toniebox-reverse-engineering/teddycloud:latest
          ports:
            - containerPort: 80 #optional
            - containerPort: 443 #Port is needed for the connection for the box
          volumeMounts:
            - name: mr-teddycloud-data
              mountPath: /teddycloud/certs
              subPath: certs
            - name: mr-teddycloud-data
              mountPath: /teddycloud/config
              subPath: config
            - name: mr-teddycloud-data
              mountPath: /teddycloud/data/content
              subPath: content
            - name: mr-teddycloud-data
              mountPath: /teddycloud/data/library
              subPath: library
            - name: mr-teddycloud-data
              mountPath: /teddycloud/data/firmware
              subPath: firmware
      volumes:
        - name: mr-teddycloud-data
          persistentVolumeClaim:
            claimName: mr-teddycloud-pvc-data
