k3s/mr-teddycloud/mr-teddycloud-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: mr-teddycloud
  name: mr-teddycloud-service
spec:
  selector:
    app: mr-teddycloud
  type: LoadBalancer
  loadBalancerIP: 192.168.0.2
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: teddycloud
    - port: 8443
      targetPort: 8443
      protocol: TCP
      name: https-webinterface
    - port: 443
      targetPort: 443
      protocol: TCP
      name: boxport #Port is needed for the connection for the box
